--- a/Web_Design_Porfolio/contact.html
+++ b/Web_Design_Porfolio/contact.html
@@ -9,9 +9,9 @@
   <header>
     <h1>Contact Me</h1>
     <nav>
-      <a href="index_WebDesign_H1.html">Home</a> |
-      <a href="contact_WebDesign_H1.html">Contact</a> |
-      <a href="portfolio_WebDesign_h1.html">Portfolio</a>
+      <a href="index.html">Home</a> |
+      <a href="contact.html">Contact</a> |
+      <a href="portfolio.html">Portfolio</a>
     </nav>
   </header>
 
